Changed welcome message

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         {% include header.html %}
-        <h1>Hello Joyce</h1>
+        <h1>Hello World</h1>
     </body>
 </html>
